# sdk-nexus

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: README.md  broken_meta_example.py  create_meta.py  create_module_example.py  demo_workflow.py  install_order_v2.py  mock_storage.py  modify_and_validate.py  validate_meta.py
examples/accounting_basic/: __init__.py  __meta__.py  admin.py  apps.py
examples/accounting_basic/api/: endpoints.py
examples/accounting_basic/core/: models.py
examples/accounting_basic/events/: handlers.py
examples/accounting_basic/tests/: test_meta.py
examples/invalid_module/: __meta__.py
examples/minimal_module/: __meta__.py
examples/modules/base/: __meta__.py
examples/modules/inventory/: __meta__.py
examples/modules/sales/: __meta__.py
examples/sample_module/: __meta__.py
examples/validation_dni_ec/: __meta__.py
examples/validation_dni_ec/core/: validators.py
src/sdk/: __init__.py  contracts.py  exceptions.py
src/sdk/cli/: __init__.py  create.py  info.py  package.py  test_cmd.py  validate.py
src/sdk/dependency/: __init__.py  install_plan.py  resolution.py  resolver.py
src/sdk/installer/: installer.py  resolver.py
src/sdk/meta_codegen/: __init__.py  meta_generator.py  meta_writer.py  template_engine.py
src/sdk/schemas/: __init__.py  app_schema.py  dependency_schema.py  lib_schema.py  meta_schema.py  module_schema.py
tests/: __init__.py  test_installer.py  test_resolver.py  test_schemas.py  test_sdk.py  test_validator.py
(+7 files in other folders)
