[project]
name = "sdk-nexus"
version = "1.1.0"
description = "Dev Toolkit para crear módulos compatibles con ERP Nexus"
authors = [{name = "ERP Nexus Team", email = "team@erp-nexus.org"}]
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
dependencies = [
    "pydantic>=2.6.0",
    "semantic-version>=2.10.0",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
sdk-nexus = "sdk.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sdk"]
